<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5BFEFEFE"
    app:cardCornerRadius="20dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00FEFEFE">

        <TextView
            android:id="@+id/nameRepo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name_repo"
            app:layout_constraintEnd_toStartOf="@+id/forksCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nameRepo"
            app:layout_constraintStart_toStartOf="@+id/nameRepo"
            app:layout_constraintTop_toBottomOf="@+id/nameRepo" />

        <TextView
            android:id="@+id/forksCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/forks_count_hint"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forks"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/forksCount"
            app:layout_constraintStart_toStartOf="@+id/forksCount"
            app:layout_constraintTop_toBottomOf="@+id/forksCount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
