<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#19FEFEFE"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FEFEFE">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatarView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/avatar_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"/>

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/username_hint"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/avatarView"
            app:layout_constraintEnd_toStartOf="@+id/scoreCountText"
            app:layout_constraintStart_toEndOf="@+id/avatarView"
            app:layout_constraintTop_toTopOf="@+id/avatarView" />

        <TextView
            android:id="@+id/scoreCountText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/score_count_hint"
            android:textAlignment="textEnd"
            android:textColor="#FF9800"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>